# NavGator

./: .gitignore  Cargo.toml  Jenkinsfile  README.md  rust-toolchain.toml
.claude/skills/run-navgator/: SKILL.md  animbase.sh  archive-smoke.sh  compare.sh  driver.sh  forms-baseline.sh  idb-index.sh  kbd-shortcuts.sh  regression.sh  svg-aspect.sh  textarea-clip.sh
.claude/skills/run-navgator/animbase/: seek.html
.claude/skills/run-navgator/forms-baseline/: forms.html
.claude/skills/run-navgator/idb-index/: idb.html
.claude/skills/run-navgator/kbd-shortcuts/: k.html
.claude/skills/run-navgator/regression/: clip_text.ref.html  clip_text.test.html  forms_accent.html  grid_cols.ref.html  grid_cols.test.html  light_dark.ref.html  light_dark.test.html  mask_chevron.ref.html  mask_chevron.test.html  mask_circle.ref.html  mask_circle.test.html  scheme_light.ref.html  scheme_light.test.html
.claude/skills/run-navgator/svg-aspect/: icons.html
.claude/skills/run-navgator/textarea-clip/: clip.html
.github/workflows/: ci.yml  publish-manifest.yml
crates/navgator/: Cargo.toml  build.rs
crates/navgator-engine/: Cargo.toml
crates/navgator-engine/src/: lib.rs
crates/navgator-protocol/: Cargo.toml
crates/navgator-protocol/src/: lib.rs
crates/navgator/locales/: en-GB.ftl  en-US.ftl  es.ftl  fr.ftl  ru.ftl  zh.ftl
crates/navgator/src/: archive.rs  autofill.rs  dashboard.rs  fonts.rs  highlights.rs  i18n.rs  keyring_store.rs  lib.rs  main.rs  oauth.rs  palette.rs  password.rs  studio.rs  sync.rs  theme.rs  userscripts.rs  widgets.rs
crates/navgator/src/chrome/: chrome.css  chrome.js  index.html
crates/navgator/src/content/: about.html  blocklist.txt  crash.html  downloads.html  extensions.html  history.html  home.html  passwords.html  settings.html  welcome.html
crates/swerve/: Cargo.toml
crates/swerve-engine/: Cargo.toml
crates/swerve-engine/src/: lib.rs
crates/swerve-protocol/: Cargo.toml
crates/swerve-protocol/src/: lib.rs
crates/swerve/src/: main.rs
crates/swerve/src/chrome/: chrome.css  chrome.js  index.html
crates/swerve/src/content/: home.html  settings.html
docs/: ANDROID.md  ARCHITECTURE.md  FORK.md  ROADMAP.md
docs/plan/: architecture.md  engine-gap.md  extensions.md  positioning.md  product-features.md  sandbox-rework.md  security.md  sustainability.md  swerveos.md  sync-lyku-integration.md  sync.md  theming.md  userscripts-design.md
jenkins/: setup-jenkins.sh
jenkins/job-configs/: navgator-ci.xml  swerve-ci.xml
packaging/: AppRun  Info.plist  macos-entitlements.plist  navgator.desktop  navgator.icns  swerve.desktop
packaging/navgator.icon/: icon.json
patches/: avif-decode.swervo.patch  background-clip-text.stylo.patch  background-clip-text.swervo.patch  codec-registry-scanner.swervo.patch  containing-block-boxless-ancestor-loop.swervo.patch  currenttime-after-ended.swervo.patch  eme-brick1.swervo.patch  eme-brick2.swervo.patch  eme-cenc-decrypt-element.swervo.patch  eme-clearkey-store.swervo.patch  eme-encrypted-event.swervo.patch  eme-eos-dropfix.swervo.patch  eme-message-event-keysystem.swervo.patch  fontconfig-family-substitute.swervo.patch  hevc-scanner.swervo.patch  indexeddb-delete-index-cleanup.swervo.patch  indexeddb-index-support.swervo.patch  input-button-center.swervo.patch  light-dark-is-dark-color-scheme.stylo.patch  mse-addsourcebuffer.swervo.patch  mse-appendbuffer.swervo.patch  mse-attach-sourceopen.swervo.patch  mse-buffered-playback.swervo.patch  mse-createobjecturl.swervo.patch  mse-events.swervo.patch  mse-nonseekable.swervo.patch  mse-phase1.swervo.patch  mse-remove-abort.swervo.patch  sri-no-panic-on-incomplete-body.swervo.patch  svg-preserve-aspect-ratio.swervo.patch  textarea-min-block-size.swervo.patch  timer-starvation-fix.swervo.patch
scripts/: android-apk.sh  linux-bundle-gst.py  macos-bundle-gst.py  make-icon.sh  package-windows.ps1  package.sh  publish.sh  register-release.py  stamp-icon.py  sync-forks.sh
src/: main.rs
src/chrome/: chrome.css  chrome.js  index.html
src/content/: about.html
