# navgator — Cargo workspace.
#
# The engine dependency is quarantined in the `navgator-engine` crate (the only crate
# that touches the Servo fork). `navgator-protocol` holds servo-free wire types. The
# `navgator` crate is the browser binary. See docs/ARCHITECTURE.md, docs/FORK.md,
# ROADMAP §R2.
[workspace]
resolver = "3"
members = ["crates/navgator-protocol", "crates/navgator-engine", "crates/navgator"]

# Speed up the (enormous) engine dependency compile in dev builds.
[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"

# ── Engine fork patches (ROADMAP §R2/D1; see docs/FORK.md) ────────────────────
# Redirect Servo's stylo (CSS engine) and webrender (GPU renderer) deps to our
# maintained forks, so the whole engine surface is under github.com/airgap. The
# stylo fork now carries the `background-clip: text` keyword (airgap/stylo, LYK-1296);
# Cargo honours these workspace-root patches across the entire (swervo-transitive) graph.
[patch."https://github.com/servo/stylo"]
selectors            = { git = "https://github.com/airgap/stylo", rev = "d9917faab0b640812246a71d04f2a053fff1341a" }
servo_arc            = { git = "https://github.com/airgap/stylo", rev = "d9917faab0b640812246a71d04f2a053fff1341a" }
stylo                = { git = "https://github.com/airgap/stylo", rev = "d9917faab0b640812246a71d04f2a053fff1341a" }
stylo_atoms          = { git = "https://github.com/airgap/stylo", rev = "d9917faab0b640812246a71d04f2a053fff1341a" }
stylo_dom            = { git = "https://github.com/airgap/stylo", rev = "d9917faab0b640812246a71d04f2a053fff1341a" }
stylo_malloc_size_of = { git = "https://github.com/airgap/stylo", rev = "d9917faab0b640812246a71d04f2a053fff1341a" }
stylo_static_prefs   = { git = "https://github.com/airgap/stylo", rev = "d9917faab0b640812246a71d04f2a053fff1341a" }
stylo_traits         = { git = "https://github.com/airgap/stylo", rev = "d9917faab0b640812246a71d04f2a053fff1341a" }

# webrender is consumed from crates.io (0.69 / 0.2.2); redirect to our fork's 0.69-branch HEAD.
[patch.crates-io]
webrender         = { git = "https://github.com/airgap/webrender", rev = "dcfd5424deab751280e34a39220a7e1562263294" }
webrender_api     = { git = "https://github.com/airgap/webrender", rev = "dcfd5424deab751280e34a39220a7e1562263294" }
wr_malloc_size_of = { git = "https://github.com/airgap/webrender", rev = "dcfd5424deab751280e34a39220a7e1562263294" }
