[package]
name = "navgator-engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MPL-2.0"
description = "The only navgator crate that touches the Servo fork — quarantines the engine."

[dependencies]
# ── Servo embedding (our maintained fork; see docs/FORK.md, ROADMAP §R2) ──────
# This is the ONLY crate that depends on the engine, so engine churn is isolated
# here. `servo` is the high-level embedding crate. rev 2c71c0e7d (branch sandbox-landlock on
# airgap/swervo) carries our fork patches: the UA rebrand + Content-Disposition attachment
# downloads (ParserContext streams to ~/Downloads + Download EmbedderMsg/delegate) + the
# content sandbox (gaol -> Landlock + seccomp; sandbox_backend.rs, applied in create_sandbox) +
# CSS mask-image + form-control accent colour + `background-clip: text` (LYK-1296; needs the
# matching airgap/stylo rev wired via the workspace `[patch]`) + AVIF decode (LYK-1297; the
# image `avif-native` feature in swervo's own Cargo.toml pulls in dav1d — build needs libdav1d) +
# inline-<svg> preserveAspectRatio `meet` (LYK-1300; fixes the vertically-stretched clear "X" in
# Google's search box — inline SVGs were rasterized stretched-to-fill instead of fit+centered).
# DEFAULT features stay on
# (baked-in-resources, clipboard, js_jit); `media-gstreamer` is added so <video>/<audio>
# decode via GStreamer (requires libgstreamer1.0-dev + plugins; engine-gap.md Tier-0 #1).
# The stylo and webrender forks are wired via the workspace-root `[patch]` tables.
servo = { git = "https://github.com/airgap/swervo", rev = "dcf34ff42ca0ea5411ad312277a24049ed9e4bd2", features = ["media-gstreamer"] }

# servo-embedder-traits (lib name `embedder_traits`): EventLoopWaker lives here and
# isn't re-exported by `servo`. Same rev as `servo`.
embedder_traits = { git = "https://github.com/airgap/swervo", rev = "dcf34ff42ca0ea5411ad312277a24049ed9e4bd2", package = "servo-embedder-traits" }

# `http` (HeaderMap/StatusCode/HeaderValue) — needed to build WebResourceResponse for the
# gator:// internal-page interception. Unifies with the engine's own http (servo uses 1.x).
http = "1"
