[package]
name = "navgator-engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MPL-2.0"
description = "The only navgator crate that touches the Servo fork — quarantines the engine."

[dependencies]
# ── Servo embedding (our maintained fork; see docs/FORK.md, ROADMAP §R2) ──────
# This is the ONLY crate that depends on the engine, so engine churn is isolated
# here. `servo` is the high-level embedding crate. rev dcf34ff (airgap/swervo `main` /
# `sandbox-landlock`) carries our fork patches: the UA rebrand + Content-Disposition attachment
# downloads (ParserContext streams to ~/Downloads + Download EmbedderMsg/delegate) + the
# content sandbox (gaol -> Landlock + seccomp; sandbox_backend.rs, applied in create_sandbox) +
# CSS mask-image + form-control accent colour + `background-clip: text` (LYK-1296; needs the
# matching airgap/stylo rev wired via the workspace `[patch]`) + AVIF decode (LYK-1297; the
# image `avif-native` feature in swervo's own Cargo.toml pulls in dav1d — build needs libdav1d) +
# inline-<svg> preserveAspectRatio `meet` (LYK-1300; fixes the vertically-stretched clear "X" in
# Google's search box — inline SVGs were rasterized stretched-to-fill instead of fit+centered).
# DEFAULT features stay on (baked-in-resources, clipboard, js_jit). `media-gstreamer` (for
# <video>/<audio> decode) is enabled per-target below — desktop only, since Android has no
# desktop GStreamer. The stylo and webrender forks are wired via the workspace-root `[patch]` tables.
servo = { git = "https://github.com/airgap/swervo", rev = "4173beefcc60a69725725af0913442cb74ad28c8" }

# servo-embedder-traits (lib name `embedder_traits`): EventLoopWaker lives here and
# isn't re-exported by `servo`. Same rev as `servo`.
embedder_traits = { git = "https://github.com/airgap/swervo", rev = "4173beefcc60a69725725af0913442cb74ad28c8", package = "servo-embedder-traits" }

# `http` (HeaderMap/StatusCode/HeaderValue) — needed to build WebResourceResponse for the
# gator:// internal-page interception. Unifies with the engine's own http (servo uses 1.x).
http = "1"

# Desktop (non-Android) enables media-gstreamer; needs system GStreamer (engine-gap Tier-0 #1).
# Android has no desktop GStreamer — the engine builds without it there (Android media is a
# future servo-media backend). Cargo unions these features onto the base `servo` dep above.
[target.'cfg(not(target_os = "android"))'.dependencies]
servo = { git = "https://github.com/airgap/swervo", rev = "4173beefcc60a69725725af0913442cb74ad28c8", features = ["media-gstreamer"] }
