[package]
name = "navgator"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MPL-2.0"
description = "A web browser with native (egui) chrome and Servo as the page renderer"
repository = "https://github.com/airgap/NavGator"

[[bin]]
name = "navgator"
path = "src/main.rs"

[dependencies]
navgator-engine = { path = "../navgator-engine" }
navgator-protocol = { path = "../navgator-protocol" }

# Windowing / geometry (versions matched to the engine's workspace).
winit = "0.30.13"
euclid = "0.22"
url = "2.5"

# Servo does TLS through rustls; a crypto provider is installed at startup.
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }

# Native chrome: egui drawn over the page (same versions servoshell uses, so the lock
# resolves cleanly against the engine's glow/winit/raw-window-handle).
egui = "0.34.3"
egui_glow = { version = "0.34.3", features = ["winit"] }
egui-winit = { version = "0.34.3", default-features = false, features = ["clipboard", "wayland"] }
glow = "0.17"
# In-egui file picker (no native GTK/portal dep), as used by servoshell.
egui-file-dialog = "0.13.0"

# Lyku sync (early access): a small blocking HTTPS+JSON client, run on a background thread
# (its rustls/ring config is independent of the engine's aws-lc-rs provider).
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# E2EE password store: Argon2id KDF + XChaCha20-Poly1305 (matches Lyku's zero-knowledge
# passwords collection). Pinned to the versions already in the lock (pulled by the engine).
argon2 = "=0.6.0-rc.8"
chacha20poly1305 = "=0.11.0-rc.3"
rand_core = { version = "0.6", features = ["getrandom"] }

# Read Chrome/Firefox History + places.sqlite for import (already in the lock via the
# engine's IndexedDB backend). Opened read-only + immutable so a running browser's lock is
# not an obstacle.
rusqlite = "0.37"

# Content blocking: Brave's adblock-rust — EasyList-syntax network filtering, checked in
# load_web_resource (which already intercepts every request).
adblock = { version = "0.12", default-features = false, features = ["embedded-domain-resolver"] }

# OS keyring (Linux Secret Service) for remembering the sync passphrase. Optional at
# runtime — all calls degrade to manual unlock if no secret-service is available.
# Pure-rust crypto (no system OpenSSL dep); zbus is already in the cache transitively.
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
