[package]
name = "navgator"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MPL-2.0"
description = "A web browser with native (egui) chrome and Servo as the page renderer"
repository = "https://github.com/airgap/NavGator"

# ── Android packaging (cargo-apk) ──────────────────────────────────────────────
[package.metadata.android]
package = "org.airgap.navgator"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 30
target_sdk_version = 34

[package.metadata.android.application]
label = "NavGator"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[lib]
name = "navgator"
# rlib for the desktop binary to link; cdylib for the Android NativeActivity (.so).
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "navgator"
path = "src/main.rs"

[dependencies]
navgator-engine = { path = "../navgator-engine" }
navgator-protocol = { path = "../navgator-protocol" }

# The `log` facade — used only to install a content-process panic hook that relays panics to the
# engine's constellation logger (crash recovery, LYK-1410). Version tracks the engine's own `log`.
log = "0.4"

# Windowing / geometry (versions matched to the engine's workspace).
winit = "0.30.13"
euclid = "0.22"
url = "2.5"

# Servo does TLS through rustls; a crypto provider is installed at startup.
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }

# Native chrome: egui drawn over the page (same versions servoshell uses, so the lock
# resolves cleanly against the engine's glow/winit/raw-window-handle).
egui = "0.34.3"
egui_glow = { version = "0.34.3", features = ["winit"] }
egui-winit = { version = "0.34.3", default-features = false, features = ["accesskit", "clipboard", "wayland"] }
glow = "0.17"
# In-egui file picker (no native GTK/portal dep), as used by servoshell.
egui-file-dialog = "0.13.0"

# Lyku sync (early access): a small blocking HTTPS+JSON client, run on a background thread
# (its rustls/ring config is independent of the engine's aws-lc-rs provider).
ureq = { version = "2", features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# E2EE password store: Argon2id KDF + XChaCha20-Poly1305 (matches Lyku's zero-knowledge
# passwords collection). Pinned to the versions already in the lock (pulled by the engine).
argon2 = "=0.6.0-rc.8"
chacha20poly1305 = "0.11.0"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"

# Read Chrome/Firefox History + places.sqlite for import (already in the lock via the
# engine's IndexedDB backend). Opened read-only + immutable so a running browser's lock is
# not an obstacle.
rusqlite = "0.37"

# Content blocking: Brave's adblock-rust — EasyList-syntax network filtering, checked in
# load_web_resource (which already intercepts every request).
adblock = { version = "0.12", default-features = false, features = ["embedded-domain-resolver"] }

# Encode cached favicons to PNG for the native new-tab tiles (already in the lock via the
# engine's image stack), so tiles render from a local cache instead of a live network fetch.
png = "0.18"

# Localization (i18n): Fluent catalogs per locale + system-locale detection. Fluent is the
# browser-standard (Firefox/Servo) message format — handles plurals/interpolation and is
# extensible to more locales (LYK i18n).
fluent = "0.16"
unic-langid = { version = "0.9", features = ["macros"] }
sys-locale = "0.3"

# X11-only: query surfman's GL config's native X visual so the window is created with the SAME
# visual, or strict EGL drivers (NVIDIA) fail eglCreateWindowSurface -> surfman panics on launch.
# Plus the OS keyring for the sync passphrase — the Secret Service backend is Linux-only (macOS
# and Windows use their native keychains below). keyring_store is called unconditionally, so
# every desktop target needs a backend.
[target.'cfg(all(unix, not(target_os = "macos"), not(target_os = "android")))'.dependencies]
khronos-egl = { version = "6", features = ["dynamic"] }
libloading = "0.8"
raw-window-handle = "0.6"
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }

# macOS Keychain backend for the sync passphrase.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

# Windows Credential Manager backend for the sync passphrase.
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }

# Embed packaging/navgator.ico (+ version info) into the .exe via build.rs. winresource is the
# maintained fork of winres.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# Android entry point: winit drives the NativeActivity via android-activity (Android only).
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
